--- a/public/package.json
+++ b/public/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "echo ok!",
+    "start": "exit 0",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
